--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -4,94 +4,160 @@
     <meta charset="UTF-8">
     <title>JQuery FAQ</title>
     <style>
-        .invisible{
+        .invisible {
             display: none;
+        }
+        .highlight{
+            background-color: yellow;
         }
     </style>
 </head>
 <body>
 <script src="js/jquery.js"></script>
 
-<button id="button">Click here to reveal</button>
-<dl>
-    <dt>Who is the director of the National Park Service?</dt>
-    <dd class="invisible">
-        Dan Smith is the deputy director exercising the authority of director for the National Park Service.
-        Learn more about past directors of the National Park Service.k
-    </dd>
-    <dt>What government agency oversees the National Park Service?</dt>
-    <dd class="invisible">
-        The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is
-        the department's Assistant Secretary for Fish, Wildlife and Parks.
-    </dd>
-    <dt>How many employees are in the National Park Service?</dt>
-    <dd class="invisible">
-        <li>Permanent, temporary, and seasonal employees: More than 20,000</li>
-        <li>Volunteers: More than 315,000 in 2017</li>
-    </dd>
-    <dt>How old is the National Park System?</dt>
-    <dd class="invisible">
-        The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916.
-        Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as
-        the nation's first national park. View the National Park System timeline.
-    </dd>
-    <dt>What is the origin of the National Park Service arrowhead?</dt>
-    <dd class="invisible">
-        The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on
-        July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park
-        System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water
-        representing scenic and recreational values, and the arrowhead itself representing historical and archeological
-        values. Read more about the history of the arrowhead and other elements of NPS visual design.
 
-        The NPS allows limited use of the NPS arrowhead when doing so contributes to our work. Learn how to request
-        permission to use the arrowhead.
-    </dd>
-    <dt>How many areas are in the National Park System?</dt>
-    <dd class="invisible">
-        The system includes 417 areas covering more than 84 million acres in every state, the District of Columbia,
-        American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments,
-        battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic
-        rivers and trails, and the White House. Learn more about national park designations. See the complete list of
-        National Park Service units and affiliated areas by type and number.
-    </dd>
-    <dt>What is the largest national park site? Smallest?</dt>
-    <dd class="invisible">
+<!--<button id="button">Click here to reveal</button>-->
+<!--<dl>-->
+    <!--<dt>Who is the director of the National Park Service?</dt>-->
+    <!--<dd class="invisible">-->
+        <!--Dan Smith is the deputy director exercising the authority of director for the National Park Service.-->
+        <!--Learn more about past directors of the National Park Service.k-->
+    <!--</dd>-->
+    <!--<dt>What government agency oversees the National Park Service?</dt>-->
+    <!--<dd class="invisible">-->
+        <!--The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is-->
+        <!--the department's Assistant Secretary for Fish, Wildlife and Parks.-->
+    <!--</dd>-->
+    <!--<dt>How many employees are in the National Park Service?</dt>-->
+    <!--<dd class="invisible">-->
+        <!--<li>Permanent, temporary, and seasonal employees: More than 20,000</li>-->
+        <!--<li>Volunteers: More than 315,000 in 2017</li>-->
+    <!--</dd>-->
+    <!--<dt>How old is the National Park System?</dt>-->
+    <!--<dd class="invisible">-->
+        <!--The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916.-->
+        <!--Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as-->
+        <!--the nation's first national park. View the National Park System timeline.-->
+    <!--</dd>-->
+    <!--<dt>What is the origin of the National Park Service arrowhead?</dt>-->
+    <!--<dd class="invisible">-->
+        <!--The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on-->
+        <!--July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park-->
+        <!--System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water-->
+        <!--representing scenic and recreational values, and the arrowhead itself representing historical and archeological-->
+        <!--values. Read more about the history of the arrowhead and other elements of NPS visual design.-->
 
-        <li>Largest: Wrangell-St. Elias National Park and Preserve, AK, at 13.2 million acres</li>
-        <li>Smallest: Thaddeus Kosciuszko National Memorial, PA, at 0.02 acres</li>
+        <!--The NPS allows limited use of the NPS arrowhead when doing so contributes to our work. Learn how to request-->
+        <!--permission to use the arrowhead.-->
+    <!--</dd>-->
+    <!--<dt>How many areas are in the National Park System?</dt>-->
+    <!--<dd class="invisible">-->
+        <!--The system includes 417 areas covering more than 84 million acres in every state, the District of Columbia,-->
+        <!--American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments,-->
+        <!--battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic-->
+        <!--rivers and trails, and the White House. Learn more about national park designations. See the complete list of-->
+        <!--National Park Service units and affiliated areas by type and number.-->
+    <!--</dd>-->
+    <!--<dt>What is the largest national park site? Smallest?</dt>-->
+    <!--<dd class="invisible">-->
 
-        Current information on acreage for units across the National Park System is also available.
-    </dd>
-    <dt>How many people visit the national parks?</dt>
-    <dd class="invisible">
-        <li>Total recreation visitors to the national parks in 2017: 330,882,751</li>
-    </dd>
-    <dt>What is the most-visited national park?</dt>
-    <dd class="invisible">Blue Ridge Parkway: 16,093,765 visitors per year.</dd>
-    <dt>What is the National Park Service budget?</dt>
-    <dd class="invisible">
-        <li>Fiscal Year (FY) 2014 Enacted: $2.98 billion</li>
-        <li>FY 2015 Enacted: $2.615 billion</li>
-        <li>FY 2016 Enacted:$2.851 billion</li>
-        <li>FY 2017 Enacted: $2.932 billion</li>
-    </dd>
-<script>
+        <!--<li>Largest: Wrangell-St. Elias National Park and Preserve, AK, at 13.2 million acres</li>-->
+        <!--<li>Smallest: Thaddeus Kosciuszko National Memorial, PA, at 0.02 acres</li>-->
+
+        <!--Current information on acreage for units across the National Park System is also available.-->
+    <!--</dd>-->
+    <!--<dt>How many people visit the national parks?</dt>-->
+    <!--<dd class="invisible">-->
+        <!--<li>Total recreation visitors to the national parks in 2017: 330,882,751</li>-->
+    <!--</dd>-->
+    <!--<dt>What is the most-visited national park?</dt>-->
+    <!--<dd class="invisible">Blue Ridge Parkway: 16,093,765 visitors per year.</dd>-->
+    <!--<dt>What is the National Park Service budget?</dt>-->
+    <!--<dd class="invisible">-->
+        <!--<li>Fiscal Year (FY) 2014 Enacted: $2.98 billion</li>-->
+        <!--<li>FY 2015 Enacted: $2.615 billion</li>-->
+        <!--<li>FY 2016 Enacted:$2.851 billion</li>-->
+        <!--<li>FY 2017 Enacted: $2.932 billion</li>-->
+    <!--</dd>-->
+    <!--<h3>Yellowstone National Park</h3>-->
+    <!--<ul>-->
+        <!--<li>Yellowstone was established in 1872 and was Americas first National Park.</li>-->
+        <!--<li>Yellowstone spans almost 3,500 miles, extending into parts of Montana and Ohio.</li>-->
+        <!--<li>Yellowstone sits atop a dormant volcano</li>-->
+        <!--<li>Approximately 50 percent of the worlds hydrothermal features are at Yellowstone National Park.</li>-->
+    <!--</ul>-->
+<!--<dl/>-->
+
+    <!-------------------------------------------------------------------------------------------------------------->
+
+    <!--NATIONAL PARKS TRAVERSING STARTS HERE-->
+
+<button id="reveal">Click to reveal</button>
+
+    <h3>Yosemite National Park </h3>
+    <ul>
+        <li>Yosemite National Park was founded in 1890.</li>
+        <li>Almost 95 percent of the park’s 747,956 acres (roughly the size of Rhode Island) is classified as
+            wilderness.
+        </li>
+        <li>Yosemite Falls is the largest waterfall in North America with breathtaking views.</li>
+        <li>Yosemite draws four million annual visitors.</li>
+    </ul>
 
 
-    $('dt').click(function () {
-        $(this).next().toggleClass().css('background-color', 'yellow');
-    });
+    <h3>Arches National Park</h3>
+    <ul>
+        <li>Arches National Park contains over 2,000 natural sandstone arches!</li>
+        <li>
+            Arches National Park covers an area of 310 square kilometers (120 square miles) or 31,031 hectares (76,679
+            acres).
+        </li>
+        <li>
+            About 300 million years ago an inland sea covered what is now Arches National Park. The sea evaporated and
+            re-formed 29 times in all, leaving behind salt beds thousands of feet thick.
+        </li>
+        <li>
+            Its highest elevation is 1,723 meters (5,653 feet) at Elephant Butte, and its lowest elevation is
+            1,245 meters (4,085 feet) at the visitor center.
 
-    $('#button').click(function () {
-        $('dd').toggleClass();
-
-    })
-
+        </li>
+    </ul>
+    <script>
 
 
+           // $('dt').click(function () {
+           //     $(this).next().toggleClass('invisible').css('background-color', 'yellow');
+           // });
+           //
+           // $('#button').click(function () {
+           //     $('dd').toggleClass('invisible');
+           //
+           // })
 
-</script>
 
-</dl>
+    </script>
+
+    <script>
+        //National Parks Traversing JQuery
+
+        $('#reveal').click(function () {
+            $('ul').each(function (index, element) {
+                $(element).children().last().addClass('highlight');
+
+            });
+        });
+
+        $('h3').click(function (event) {
+            $(this).next().children().css('font-weight', 'bold');
+        });
+        $('li').click(function (event) {
+            $(this).parent().children().first().css('color', 'blue');
+
+
+        });
+
+    </script>
+
+
 </body>
 </html>
